# ros2-multimodal-robot-collab

./: .env.example  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  THIRD_PARTY.md
.github/workflows/: ros2-ci.yml
agent_harness/examples/: deliver_hex_key_plan.json  emergency_stop_plan.json
agent_harness/schemas/: mission_plan.schema.json
agent_harness/scripts/: minimax_mission_planner.py  ros_tool_executor.py  skill_router.py
agent_harness/tests/: test_harness.py
docs/: agent_skills.md  architecture.md  gazebo_vins_nav2_plan.md  phase3_moveit2_plan.md  roadmap.md  wsl_setup_humble.md
models/: .gitignore  README.md
scripts/: build_ros2_workspace.sh  check_ros2_env.sh  drive_cmd_vel.py  execute_agent_plan.sh  fetch_models.ps1  fetch_models.sh  fetch_third_party.ps1  fetch_third_party.sh  read_odom_once.py  run_agent_plan_dry_run.sh  run_demo_mission.sh  run_gazebo_visible_demo.sh  send_motion_test.sh  setup_ros2_cn_mirror.sh  snapshot_camera.py  test_cmd_vel_motion.sh
skills/hri/: SKILL.md  schema.json
skills/hri/examples/: say_delivery_started.json
skills/hri/scripts/: publish_tts.py
skills/manipulation/: SKILL.md  schema.json
skills/manipulation/examples/: pause_arm.json
skills/manipulation/scripts/: send_arm_control.py
skills/mission-control/: SKILL.md  schema.json
skills/mission-control/examples/: deliver_hex_key.json
skills/mission-control/scripts/: send_delivery_goal.py
skills/navigation/: SKILL.md  schema.json
skills/navigation/examples/: navigate_station_a.json
skills/navigation/scripts/: send_navigation_goal.py
skills/perception/: SKILL.md  schema.json
skills/perception/examples/: openpose_fist_pause.json
skills/system-state/: SKILL.md  schema.json
skills/system-state/examples/: query_state.json
skills/system-state/scripts/: query_system_state.py
src/robot_collab_agent/: package.xml  setup.cfg  setup.py
src/robot_collab_agent/resource/: robot_collab_agent
src/robot_collab_agent/robot_collab_agent/: __init__.py  agent_gateway_node.py
src/robot_collab_bringup/: package.xml  setup.cfg  setup.py
src/robot_collab_bringup/config/: demo_params.yaml  nav2_params.yaml  slam_toolbox_params.yaml  stations.yaml
src/robot_collab_bringup/launch/: demo_sim.launch.py  gazebo_nav_vins_demo.launch.py  perception_yolov8_gesture.launch.py  perception_yolov8_openpose.launch.py
src/robot_collab_bringup/resource/: robot_collab_bringup
src/robot_collab_bringup/robot_collab_bringup/: __init__.py
src/robot_collab_core/: package.xml  setup.cfg  setup.py
src/robot_collab_core/resource/: robot_collab_core
src/robot_collab_core/robot_collab_core/: __init__.py  mission_state_machine.py
src/robot_collab_hri/: package.xml  setup.cfg  setup.py
src/robot_collab_hri/resource/: robot_collab_hri
src/robot_collab_hri/robot_collab_hri/: __init__.py  voice_gateway_node.py
src/robot_collab_interfaces/: CMakeLists.txt  package.xml
src/robot_collab_interfaces/action/: DeliverTool.action  NavigateToStation.action  PickAndPlace.action  VerifyOperator.action
src/robot_collab_interfaces/msg/: ArmControlCommand.msg  GestureCommand.msg  IdentityStatus.msg  MissionEvent.msg  ToolDetection.msg
src/robot_collab_interfaces/srv/: QuerySystemState.srv
src/robot_collab_manipulation/: package.xml  setup.cfg  setup.py
src/robot_collab_manipulation/resource/: robot_collab_manipulation
src/robot_collab_manipulation/robot_collab_manipulation/: __init__.py  arm_skill_server.py
src/robot_collab_navigation/: package.xml  setup.cfg  setup.py
src/robot_collab_navigation/resource/: robot_collab_navigation
src/robot_collab_navigation/robot_collab_navigation/: __init__.py  nav_skill_server.py
src/robot_collab_perception/: package.xml  setup.cfg  setup.py
src/robot_collab_perception/resource/: robot_collab_perception
src/robot_collab_perception/robot_collab_perception/: __init__.py  face_auth_node.py  gesture_recognizer_node.py  mediapipe_gesture_node.py  openpose_gesture_node.py  tool_detector_node.py  yolov8_tool_detector_node.py
src/robot_collab_sim/: package.xml  setup.cfg  setup.py
src/robot_collab_sim/launch/: gazebo_world.launch.py
src/robot_collab_sim/resource/: robot_collab_sim
src/robot_collab_sim/robot_collab_sim/: __init__.py
src/robot_collab_sim/urdf/: collab_mobile_base.urdf.xacro
src/robot_collab_sim/worlds/: collab_lab.world
src/robot_collab_slam/: package.xml  setup.cfg  setup.py
src/robot_collab_slam/resource/: robot_collab_slam
src/robot_collab_slam/robot_collab_slam/: __init__.py  vins_mono_bridge_node.py
