<?xml version="1.0"?>
<package format="3">
  <name>robot_collab_core</name>
  <version>0.1.0</version>
  <description>Mission state machine for ROS2 multimodal robot collaboration.</description>
  <maintainer email="terrense@example.com">terrense</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_collab_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
