<?xml version="1.0"?>
<package format="3">
  <name>robot_collab_interfaces</name>
  <version>0.1.0</version>
  <description>Shared ROS2 messages, services, and actions for the multimodal robot collaboration system.</description>
  <maintainer email="terrense@example.com">terrense</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
