<?xml version="1.0"?>
<package format="3">
  <name>robot_collab_navigation</name>
  <version>0.1.0</version>
  <description>Navigation skill server for station-level robot movement.</description>
  <maintainer email="terrense@example.com">terrense</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>action_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_collab_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
